--- a/popup.css
+++ b/popup.css
@@ -1,11 +1,68 @@
-h1 {
+.layout {
+	margin: 10px;
+}
+h1,
+h2 {
 	margin: 0;
 	padding: 0;
 }
-.header {
+
+.align-center {
 	display: flex;
 	align-items: center;
 }
+.list-item {
+	margin-right: 12px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
 .hover {
 	cursor: pointer;
+}
+.full-icon {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 10px;
+}
+h2 {
+	margin: 0;
+	padding: 0;
+	font-family: "Inter";
+	font-weight: 800;
+	font-size: 17.312px;
+	line-height: 21px;
+}
+
+label {
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 600;
+	font-size: 7.61905px;
+	line-height: 13px;
+}
+footer {
+	display: flex;
+	justify-content: space-around;
+	margin-bottom: 10px;
+}
+button {
+	width: 153px;
+	height: 42px;
+	background: #9966ff;
+	border-radius: 5px;
+	border: none;
+	color: #ffffff;
+	font-weight: bold;
+	font-size: 12px;
+	line-height: 15px;
+	cursor: pointer;
+}
+.center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.action-section {
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
